// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffHunk renders a unified diff view for the given diff hunk 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="num"
          colspan="2"
          data-diff-boundary-num="true"
        />
        <td
          class="content content"
          data-diff-boundary-content="true"
          data-diff-marker=" "
        >
          <code
            class="content"
          >
            @@ -159,7 +159,7 @@ export async function register({
          </code>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="159"
          data-part="base"
          id="anchor_L159"
        >
          <a
            class="numLine"
            href="/#anchor_L159"
          >
            159
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="159"
          data-part="head"
          id="anchor_R159"
        >
          <a
            class="numLine"
            href="/#anchor_R159"
          >
            159
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                    const subscriptions = new Subscription()
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="160"
          data-part="base"
          id="anchor_L160"
        >
          <a
            class="numLine"
            href="/#anchor_L160"
          >
            160
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="160"
          data-part="head"
          id="anchor_R160"
        >
          <a
            class="numLine"
            href="/#anchor_R160"
          >
            160
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                    const decorationType = sourcegraph.app.createDecorationType()
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="161"
          data-part="base"
          id="anchor_L161"
        >
          <a
            class="numLine"
            href="/#anchor_L161"
          >
            161
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="161"
          data-part="head"
          id="anchor_R161"
        >
          <a
            class="numLine"
            href="/#anchor_R161"
          >
            161
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                    const connection = await createConnection()
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineDeletion"
        data-hunk-line-kind="DELETED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="162"
          data-part="base"
          id="anchor_L162"
        >
          <a
            class="numLine"
            href="/#anchor_L162"
          >
            162
          </a>
        </td>
        <td
          class="num numEmpty"
        />
        <td
          class="content"
          data-diff-marker="-"
        >
          <div
            class="d-inline-block"
          >
                    logger.log(\`WebSocket connection to TypeScript backend opened\`)
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineAddition"
        data-hunk-line-kind="ADDED"
      >
        <td
          class="num numEmpty"
        />
        <td
          class="num"
          data-hunk-num=" "
          data-line="162"
          data-part="head"
          id="anchor_R162"
        >
          <a
            class="numLine"
            href="/#anchor_R162"
          >
            162
          </a>
        </td>
        <td
          class="content"
          data-diff-marker="+"
        >
          <div
            class="d-inline-block"
          >
                    logger.log(\`WebSocket connection to language server opened\`)
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="163"
          data-part="base"
          id="anchor_L163"
        >
          <a
            class="numLine"
            href="/#anchor_L163"
          >
            163
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="163"
          data-part="head"
          id="anchor_R163"
        >
          <a
            class="numLine"
            href="/#anchor_R163"
          >
            163
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                    subscriptions.add(
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="164"
          data-part="base"
          id="anchor_L164"
        >
          <a
            class="numLine"
            href="/#anchor_L164"
          >
            164
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="164"
          data-part="head"
          id="anchor_R164"
        >
          <a
            class="numLine"
            href="/#anchor_R164"
          >
            164
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                            connection.observeNotification(LogMessageNotification.type).subscribe(({ type, message }) =&gt; {
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="165"
          data-part="base"
          id="anchor_L165"
        >
          <a
            class="numLine"
            href="/#anchor_L165"
          >
            165
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="165"
          data-part="head"
          id="anchor_R165"
        >
          <a
            class="numLine"
            href="/#anchor_R165"
          >
            165
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                                const method = LSP_TO_LOG_LEVEL[type]
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DiffHunk renders dark theme decorations if dark theme is active 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="num"
          colspan="2"
          data-diff-boundary-num="true"
        />
        <td
          class="content content"
          data-diff-boundary-content="true"
          data-diff-marker=" "
        >
          <code
            class="content"
          >
            @@ -159,7 +159,7 @@ export async function register({
          </code>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="159"
          data-part="base"
          id="anchor_L159"
        >
          <a
            class="numLine"
            href="/#anchor_L159"
          >
            159
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="159"
          data-part="head"
          id="anchor_R159"
        >
          <a
            class="numLine"
            href="/#anchor_R159"
          >
            159
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
          style="background-color: red; border: 1px solid blue;"
        >
          <div
            class="d-inline-block"
          >
                    const subscriptions = new Subscription()
          </div>
           
          <span
            class=""
            data-tooltip="base hover msg"
            style="background-color: black;"
          >
            head content
          </span>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="160"
          data-part="base"
          id="anchor_L160"
        >
          <a
            class="numLine"
            href="/#anchor_L160"
          >
            160
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="160"
          data-part="head"
          id="anchor_R160"
        >
          <a
            class="numLine"
            href="/#anchor_R160"
          >
            160
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                    const decorationType = sourcegraph.app.createDecorationType()
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="161"
          data-part="base"
          id="anchor_L161"
        >
          <a
            class="numLine"
            href="/#anchor_L161"
          >
            161
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="161"
          data-part="head"
          id="anchor_R161"
        >
          <a
            class="numLine"
            href="/#anchor_R161"
          >
            161
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                    const connection = await createConnection()
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineDeletion"
        data-hunk-line-kind="DELETED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="162"
          data-part="base"
          id="anchor_L162"
        >
          <a
            class="numLine"
            href="/#anchor_L162"
          >
            162
          </a>
        </td>
        <td
          class="num numEmpty"
        />
        <td
          class="content"
          data-diff-marker="-"
          style="background-color: blue; border: 1px solid blue;"
        >
          <div
            class="d-inline-block"
          >
                    logger.log(\`WebSocket connection to TypeScript backend opened\`)
          </div>
           
          <span
            class=""
            data-tooltip="base hover msg"
            style="background-color: black;"
          >
            base content
          </span>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineAddition"
        data-hunk-line-kind="ADDED"
      >
        <td
          class="num numEmpty"
        />
        <td
          class="num"
          data-hunk-num=" "
          data-line="162"
          data-part="head"
          id="anchor_R162"
        >
          <a
            class="numLine"
            href="/#anchor_R162"
          >
            162
          </a>
        </td>
        <td
          class="content"
          data-diff-marker="+"
        >
          <div
            class="d-inline-block"
          >
                    logger.log(\`WebSocket connection to language server opened\`)
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="163"
          data-part="base"
          id="anchor_L163"
        >
          <a
            class="numLine"
            href="/#anchor_L163"
          >
            163
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="163"
          data-part="head"
          id="anchor_R163"
        >
          <a
            class="numLine"
            href="/#anchor_R163"
          >
            163
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                    subscriptions.add(
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="164"
          data-part="base"
          id="anchor_L164"
        >
          <a
            class="numLine"
            href="/#anchor_L164"
          >
            164
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="164"
          data-part="head"
          id="anchor_R164"
        >
          <a
            class="numLine"
            href="/#anchor_R164"
          >
            164
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                            connection.observeNotification(LogMessageNotification.type).subscribe(({ type, message }) =&gt; {
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="165"
          data-part="base"
          id="anchor_L165"
        >
          <a
            class="numLine"
            href="/#anchor_L165"
          >
            165
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="165"
          data-part="head"
          id="anchor_R165"
        >
          <a
            class="numLine"
            href="/#anchor_R165"
          >
            165
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                                const method = LSP_TO_LOG_LEVEL[type]
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DiffHunk renders decorations if given 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="num"
          colspan="2"
          data-diff-boundary-num="true"
        />
        <td
          class="content content"
          data-diff-boundary-content="true"
          data-diff-marker=" "
        >
          <code
            class="content"
          >
            @@ -159,7 +159,7 @@ export async function register({
          </code>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="159"
          data-part="base"
          id="anchor_L159"
        >
          <a
            class="numLine"
            href="/#anchor_L159"
          >
            159
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="159"
          data-part="head"
          id="anchor_R159"
        >
          <a
            class="numLine"
            href="/#anchor_R159"
          >
            159
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
          style="background-color: red;"
        >
          <div
            class="d-inline-block"
          >
                    const subscriptions = new Subscription()
          </div>
           
          <span
            class=""
            data-tooltip="base hover msg"
            style="background-color: black;"
          >
            head content
          </span>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="160"
          data-part="base"
          id="anchor_L160"
        >
          <a
            class="numLine"
            href="/#anchor_L160"
          >
            160
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="160"
          data-part="head"
          id="anchor_R160"
        >
          <a
            class="numLine"
            href="/#anchor_R160"
          >
            160
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                    const decorationType = sourcegraph.app.createDecorationType()
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="161"
          data-part="base"
          id="anchor_L161"
        >
          <a
            class="numLine"
            href="/#anchor_L161"
          >
            161
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="161"
          data-part="head"
          id="anchor_R161"
        >
          <a
            class="numLine"
            href="/#anchor_R161"
          >
            161
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                    const connection = await createConnection()
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineDeletion"
        data-hunk-line-kind="DELETED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="162"
          data-part="base"
          id="anchor_L162"
        >
          <a
            class="numLine"
            href="/#anchor_L162"
          >
            162
          </a>
        </td>
        <td
          class="num numEmpty"
        />
        <td
          class="content"
          data-diff-marker="-"
          style="background-color: blue;"
        >
          <div
            class="d-inline-block"
          >
                    logger.log(\`WebSocket connection to TypeScript backend opened\`)
          </div>
           
          <span
            class=""
            data-tooltip="base hover msg"
            style="background-color: black;"
          >
            base content
          </span>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineAddition"
        data-hunk-line-kind="ADDED"
      >
        <td
          class="num numEmpty"
        />
        <td
          class="num"
          data-hunk-num=" "
          data-line="162"
          data-part="head"
          id="anchor_R162"
        >
          <a
            class="numLine"
            href="/#anchor_R162"
          >
            162
          </a>
        </td>
        <td
          class="content"
          data-diff-marker="+"
        >
          <div
            class="d-inline-block"
          >
                    logger.log(\`WebSocket connection to language server opened\`)
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="163"
          data-part="base"
          id="anchor_L163"
        >
          <a
            class="numLine"
            href="/#anchor_L163"
          >
            163
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="163"
          data-part="head"
          id="anchor_R163"
        >
          <a
            class="numLine"
            href="/#anchor_R163"
          >
            163
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                    subscriptions.add(
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="164"
          data-part="base"
          id="anchor_L164"
        >
          <a
            class="numLine"
            href="/#anchor_L164"
          >
            164
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="164"
          data-part="head"
          id="anchor_R164"
        >
          <a
            class="numLine"
            href="/#anchor_R164"
          >
            164
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                            connection.observeNotification(LogMessageNotification.type).subscribe(({ type, message }) =&gt; {
          </div>
        </td>
      </tr>
      <tr
        class="a11y-ignore lineBoth"
        data-hunk-line-kind="UNCHANGED"
      >
        <td
          class="num"
          data-hunk-num=" "
          data-line="165"
          data-part="base"
          id="anchor_L165"
        >
          <a
            class="numLine"
            href="/#anchor_L165"
          >
            165
          </a>
        </td>
        <td
          class="num"
          data-hunk-num=" "
          data-line="165"
          data-part="head"
          id="anchor_R165"
        >
          <a
            class="numLine"
            href="/#anchor_R165"
          >
            165
          </a>
        </td>
        <td
          class="content"
          data-diff-marker=" "
        >
          <div
            class="d-inline-block"
          >
                                const method = LSP_TO_LOG_LEVEL[type]
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
